2023-09-22  Martin Pärtel <martin dot partel at gmail dot com>

	* Support `mount -t bindfs` on MacOS (PR #140, thanks @Kentzo)

2023-07-15  Martin Pärtel <martin dot partel at gmail dot com>

	* MacOS and FreeBSD socket file support (PR #132,
	  thanks @slonopotamus)
	* MacOS fuse-t support (thanks @slonopotamus)
	* Released 1.17.4

2023-06-03  Martin Pärtel <martin dot partel at gmail dot com>

	* Added MacOS statfs_x implementation (issue #130,
	  thanks @ohayetechnology)
	* Released 1.17.3

2023-02-08  Martin Pärtel <martin dot partel at gmail dot com>

	* Released 1.17.2

2023-02-07  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed FD leak when using --block-devices-as-files
	  (issue #125, thanks @mafanasyev-tri)

2022-10-17  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed --resolve-symlinks when mountpoint name starts
	  with source dir name (issue #122, thanks @1-eric)
	* Released 1.17.1

2022-10-06  Martin Pärtel <martin dot partel at gmail dot com>

	* Basic OpenBSD support. The test suite does not pass yet.

2022-07-12  Martin Pärtel <martin dot partel at gmail dot com>

	* Reverted change in 1.16.0 that made direct_io the default.
	  It turned out to be more problematic than not having it.
	  (issue #117, thanks @DUOLabs333 and @Misterio77)
	* Released 1.17.0

2022-06-24  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --map-{passwd,group}-rev
	  (PR #113 by @sshilovsky, thanks!)
	* Fixed build on FreeBSD
	* Released 1.16.1

2022-06-18  Martin Pärtel <martin dot partel at gmail dot com>

	* Released 1.16.0

2022-04-03  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --no-direct-io and enabled FUSE's direct_io by default
	  (issue #110, thanks @DUOLabs333)

2021-02-15  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed build on old compilers by adhering more strictly to C99.
	* Released 1.15.1

2021-02-14  Martin Pärtel <martin dot partel at gmail dot com>
